--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple stats collector for private web analytics",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "tap test.js"
   },
   "repository": {
@@ -21,5 +22,8 @@
   "homepage": "https://github.com/aredridel/simplewebstats#readme",
   "devDependencies": {
     "tap": "^12.0.1"
+  },
+  "dependencies": {
+    "promise-streams": "^2.1.1"
   }
 }
