--- a/package.json
+++ b/package.json
@@ -20,6 +20,23 @@
     "url": "https://github.com/aredridel/simplewebstats/issues"
   },
   "homepage": "https://github.com/aredridel/simplewebstats#readme",
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 8,
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread": true
+      }
+    },
+    "rules": {
+      "no-unused-vars": "error",
+      "valid-typeof": "error",
+      "no-undef": "error"
+    },
+    "env": {
+      "es6": true,
+      "node": true
+    }
+  },
   "devDependencies": {
     "tap": "^12.0.1"
   },
